# ZeroStyle

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  build.bat  style.md
.github/workflows/: ci.yml
Cpp/: CMakeLists.txt  ZeroStyle.h  build.bat  style.md
Cpp/Zero/: Concepts.h  Config.h  Error.h  Macros.h  Result.h  Types.h
Cpp/test/: SmokeTest.cpp
Python/: style.md
Zero/: Concepts.h  Result.h  Types.h
cmake/: ZeroStyleConfig.cmake.in
docs/: cmake-integration.md  error-handling.md  examples.md  extension-policy.md  header-only-policy.md
examples/basic-console/: CMakeLists.txt  ProjectCore.h  main.cpp
examples/package-consumer/: CMakeLists.txt  main.cpp
include/: ZeroStyle.h
include/Zero/: Concepts.h  Diagnostics.h  Error.h  Flags.h  Format.h  Macros.h  PathUtils.h  Result.h  Scope.h  StringUtils.h  Types.h
test/: MacrosSmokeTest.cpp  ResultSmokeTest.cpp  ScopeFlagsSmokeTest.cpp  ShortMacrosSmokeTest.cpp  SmokeTest.cpp  StringPathSmokeTest.cpp  TypesConceptsSmokeTest.cpp
